--- a/angular.json
+++ b/angular.json
@@ -72,12 +72,12 @@
                             "budgets": [
                                 {
                                     "type": "initial",
-                                    "maximumWarning": "500kb",
+                                    "maximumWarning": "500mb",
                                     "maximumError": "2.75mb"
                                 },
                                 {
                                     "type": "anyComponentStyle",
-                                    "maximumWarning": "2kb",
+                                    "maximumWarning": "2mb",
                                     "maximumError": "8kb"
                                 }
                             ],
