--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,7 @@
                         "assets": [
                             "src/favicon.ico",
                             "src/assets",
-                            "src/WEB-INF",
+                            "src/.htaccess",
                             {
                                 "glob": "**/*",
                                 "input": "./config_encrypted/",
