ck editor added

--- a/package.json
+++ b/package.json
@@ -39,6 +39,16 @@
         "@angular/platform-browser-dynamic": "^14.0.1",
         "@angular/router": "^14.0.1",
         "@auth0/angular-jwt": "^5.0.2",
+        "@ckeditor/ckeditor5-angular": "^7.0.1",
+        "@ckeditor/ckeditor5-build-balloon": "^41.0.0",
+        "@ckeditor/ckeditor5-build-balloon-block": "^41.0.0",
+        "@ckeditor/ckeditor5-build-classic": "^41.0.0",
+        "@ckeditor/ckeditor5-build-decoupled-document": "^41.0.0",
+        "@ckeditor/ckeditor5-build-inline": "^41.0.0",
+        "@ckeditor/ckeditor5-core": "^41.0.0",
+        "@ckeditor/ckeditor5-engine": "^41.0.0",
+        "@ckeditor/ckeditor5-utils": "^41.0.0",
+        "@ckeditor/ckeditor5-watchdog": "^41.0.0",
         "@ngx-translate/core": "^14.0.0",
         "@ngx-translate/http-loader": "^7.0.0",
         "@types/file-saver": "^2.0.5",
