--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "ngx-slick-carousel": "^0.6.0",
         "ngx-spinner": "^13.1.1",
         "ngx-toastr": "^14.3.0",
+        "razorpay": "^2.9.2",
         "rxjs": "~7.5.0",
         "slick-carousel": "^1.8.1",
         "tslib": "^2.3.0",
