carousel slides added

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "lodash": "^4.17.21",
         "moment": "^2.29.3",
         "ng-otp-input": "^1.8.5",
+        "ngx-owl-carousel-o": "^14.0.1",
         "ngx-slick-carousel": "^0.6.0",
         "ngx-spinner": "^13.1.1",
         "ngx-toastr": "^14.3.0",
@@ -77,10 +78,10 @@
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "^14.2.2",
-        "@angular-eslint/builder": "^13.2.1",
+        "@angular-eslint/builder": "^18.0.1",
         "@angular-eslint/eslint-plugin": "^13.2.1",
         "@angular-eslint/eslint-plugin-template": "^13.2.1",
-        "@angular-eslint/schematics": "^13.2.1",
+        "@angular-eslint/schematics": "^18.0.1",
         "@angular-eslint/template-parser": "^13.2.1",
         "@angular/cli": "^14.2.7",
         "@angular/compiler-cli": "^14.0.1",
