--- a/angular.json
+++ b/angular.json
@@ -56,7 +56,10 @@
                             "node_modules/slick-carousel/slick/slick.scss",
                             "node_modules/slick-carousel/slick/slick-theme.scss",
                             "node_modules/line-awesome/dist/line-awesome/scss/line-awesome.scss",
-                            "node_modules/ngx-toastr/toastr.css",
+                            "node_modules/ngx-toastr/toastr.css",                                                    
+                            "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
+                            "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",                            
+                            "node_modules/animate.css/animate.min.css", 
                             "src/styles.scss"
                         ],
                         "stylePreprocessorOptions": {
